# solarpatch

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
solarpatch/: __init__.py  solarpatch.py  version.py
solarpatch/sources/: __init__.py  data_base.py  dataset_factory.py  hmi.py  mdi.py
solarpatch/sun/: generic_sun.py  real_sun.py  synth_sun.py
solarpatch/utils/: default_variables.py  helper_functions.py  plotting.py
