[metadata]
name = solarpatch
author = Paul J. Wright
author_email = paul@pauljwright.co.uk
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = 
description = A Python package designed for visualising SHARPs and SMARPs solar active region patches.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "solarpatch" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  solarpatch/__init*
  solarpatch/conftest.py
  solarpatch/*setup_package*
  solarpatch/tests/*
  solarpatch/*/tests/*
  solarpatch/extern/*
  solarpatch/version*
  */solarpatch/__init*
  */solarpatch/conftest.py
  */solarpatch/*setup_package*
  */solarpatch/tests/*
  */solarpatch/*/tests/*
  */solarpatch/extern/*
  */solarpatch/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
